--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/alumnoact_card.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/alumnoact_card.xml
@@ -1,197 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/act_item_card_actividad"
     android:layout_width="match_parent"
-    android:layout_height="165dp"
-    android:layout_marginBottom="@dimen/dimen_padding_extra_small"
-    android:layout_marginLeft="@dimen/dimen_padding_extra_small"
-    android:layout_marginRight="@dimen/dimen_padding_extra_small"
-    android:layout_marginTop="@dimen/dimen_padding_extra_small"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/dimen_padding_small"
+    android:layout_marginLeft="@dimen/dimen_padding_medium"
+    android:layout_marginRight="@dimen/dimen_padding_medium"
+    android:layout_marginTop="@dimen/dimen_padding_small"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="5dp"
+    card_view:cardCornerRadius="@dimen/dimen_padding_medium"
     card_view:cardElevation="@dimen/dimen_padding_extra_small"
     card_view:layout_collapseMode="parallax">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#000">
+        android:orientation="vertical"
+        android:padding="@dimen/dimen_padding_large">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#fff"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_padding_small">
 
-            <LinearLayout
+            <ImageView
+                android:layout_width="@dimen/dimen_size_icon"
+                android:layout_height="@dimen/dimen_size_icon"
+                android:src="@drawable/ic_icon_book"
+                android:tint="@color/color_green" />
+
+            <TextView
+                android:id="@+id/act_item_card_curso"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="5dp">
-
-                <TextView
-                    android:id="@+id/alum_actv_tituloAct"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TITULO"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textStyle="bold" />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#555555" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Curso:"
-                            android:textSize="17dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Profesor:"
-                            android:textSize="17dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Fecha:"
-                            android:textSize="17dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Hora Inicio:"
-                            android:textSize="17dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Hora Fin:"
-                            android:textSize="17dp" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/alum_actv_curso"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="NomCurso"
-                            android:textSize="17dp" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/alum_actv_prof"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="nomProfesor"
-                            android:textSize="17dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/alum_actv_fecha"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="fecha"
-                            android:textSize="17dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/alum_actv_hini"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="hora_ini"
-                            android:textSize="17dp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/alum_actv_hfin"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="hora_fin"
-                            android:textSize="17dp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </LinearLayout>
+                android:layout_marginLeft="@dimen/dimen_padding_medium"
+                android:text="Ciencias Sociales" />
 
         </LinearLayout>
 
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_padding_small">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_size_icon"
+                android:layout_height="@dimen/dimen_size_icon"
+                android:src="@drawable/ic_icon_task"
+                android:tint="@color/color_blue" />
+
+            <TextView
+                android:id="@+id/act_item_card_nombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_padding_medium"
+                android:text="Examen Parcial" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_padding_small">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_size_icon"
+                android:layout_height="@dimen/dimen_size_icon"
+                android:src="@drawable/ic_icon_detail"
+                android:tint="@color/color_cyan" />
+
+            <TextView
+                android:id="@+id/act_item_card_detalle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_padding_medium"
+                android:text="Abarcarn los temas de la rebolucion francesa" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_padding_small">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_size_icon"
+                android:layout_height="@dimen/dimen_size_icon"
+                android:src="@drawable/ic_icon_date"
+                android:tint="@color/color_amber" />
+
+            <TextView
+                android:id="@+id/act_item_card_fecha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_padding_medium"
+                android:text="19-06-2016" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:padding="@dimen/dimen_padding_small">
+
+            <ImageView
+                android:layout_width="@dimen/dimen_size_icon"
+                android:layout_height="@dimen/dimen_size_icon"
+                android:src="@drawable/ic_icon_time"
+                android:tint="@color/color_brown" />
+
+            <TextView
+                android:id="@+id/act_item_card_hora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dimen_padding_medium"
+                android:text="08:20 AM  a  09:10 AM" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </android.support.v7.widget.CardView>
